<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2011 Google Inc.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_below="@+id/account_name"
    android:paddingTop="20dip"
 	android:layout_width="wrap_content"
	android:layout_height="wrap_content">
	<TableRow android:layout_height="wrap_content"
	    android:paddingTop="2dip" >
	    <TextView style="@style/PolicyTable.Name"
	        android:text="@string/password_type_text" />
	    <TextView android:id="@+id/password_type_policy"
	        style="@style/PolicyTable.Value"
	        android:text="@string/na" />
	    <ImageView android:id="@+id/password_type_status"
	    	style="@style/PolicyTable.Status"
	    	android:src="@drawable/ic_policy_status" 
	    	android:scaleType="centerCrop"/>
	</TableRow>
	<TableRow android:layout_height="wrap_content">
	    <TextView style="@style/PolicyTable.Name"
	        android:text="@string/password_length_text" />
	    <TextView android:id="@+id/password_length_policy"
	        style="@style/PolicyTable.Value"
	        android:text="@string/na" />
	    <ImageView android:id="@+id/password_length_status"
	    	style="@style/PolicyTable.Status"
	    	android:src="@drawable/ic_policy_status" 
	    	android:scaleType="centerCrop"/>
	</TableRow>               
</TableLayout>