<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2011 Google Inc.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TextView
        android:id="@+id/select_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_account_text"
        style="@style/TextAppearance.Readonly"
        android:layout_margin="5dip"/>
              
    <ListView
        android:id="@+id/select_account"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/select_text"
        android:layout_above="@+id/click_next_text"
        android:layout_margin="10dip"
        android:divider="#FFFFFF"
        android:background="@android:color/transparent"
        android:cacheColorHint="@android:color/transparent" />

    <TextView
        android:id="@+id/click_next_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_next_text"
        style="@style/TextAppearance.Readonly"
        android:layout_above="@+id/progress_bar"
        android:layout_margin="5dip"/>
        
    <ProgressBar android:id="@+id/progress_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/status_text"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginBottom="0dip"
        style="?android:attr/progressBarStyleHorizontal"
        android:indeterminate="true"
        android:visibility="invisible"/>
        
    <TextView
        android:id="@+id/status_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#A0A0A0"
        android:layout_above="@+id/footer"
        android:layout_marginLeft="5dip"
        android:layout_marginTop="0dip"
        android:layout_marginBottom="10dip"
        android:visibility="invisible"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/footer"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#FF707070">
        
        <Button
            android:id="@+id/back"
            android:text="@string/back"
            android:layout_marginTop="5px"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_btn_back"/>
    
        <Button
            android:id="@+id/next"
            android:text="@string/next"
            android:layout_marginTop="5px"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_btn_next"/>
            
    </LinearLayout>
    
</RelativeLayout>